templates: default template const & disable template

--- a/src/Config/config.neon
+++ b/src/Config/config.neon
@@ -1,7 +1,7 @@
 services:
 
   - Alchemist\Manager
-  - Alchemist\Configurator
+  - Alchemist\Configurator('./config.local.neon')
   - Alchemist\TemplateLoader
 
   application:
