--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,3 +1,6 @@
 output
 /temp
 /alchemist/data/config/config.local.neon
+/alchemist/Console/data/apache/sites-enabled/
+/alchemist/Console/data/nginx/sites-enabled/
+/alchemist/Console/data/hosts
