--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 
+sudo: true
+
 php:
   - 5.6
   - 7.0
@@ -13,7 +15,7 @@ before_script:
   - composer self-update
   - composer install
 
-script: ./vendor/bin/tester -p php -c ./tests/php.ini-unix ./tests/
+script: sudo bash ./tests/run-tests.sh
 
 after_failure:
   - 'for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done'
