--- a/data/templates/apache.neon
+++ b/data/templates/apache.neon
@@ -2,23 +2,23 @@ parameters:
 	projects-dir: apache
 
 before_create:
-	- sudo service apache2 stop
+	- service apache2 stop
 	- echo "<localhost> <project-name>.<tld>" >> <hosts>
-	- sudo cp <apache-virtual-host-default> <apache-sites-enabled>/<project-name>.conf
-	- sudo sed -i 's/port/<port>/g' <apache-sites-enabled>/<project-name>.conf
-	- sudo sed -i 's/host-name/<project-name>.<tld>/g' <apache-sites-enabled>/<project-name>.conf
-	- sudo sed -i 's|'project-root'|'<project-dir>/<root>'|g' <apache-sites-enabled>/<project-name>.conf
+	- cp <apache-virtual-host-default> <apache-sites-enabled>/<project-name>.conf
+	- sed -i 's/port/<port>/g' <apache-sites-enabled>/<project-name>.conf
+	- sed -i 's/host-name/<project-name>.<tld>/g' <apache-sites-enabled>/<project-name>.conf
+	- sed -i 's|'project-root'|'<project-dir>/<root>'|g' <apache-sites-enabled>/<project-name>.conf
 
 after_create:
 	- chmod -R 0777 <projects-dir>/<project-name>
-	- sudo service apache2 start
+	- service apache2 start
 	- echo "Project '<project-name>' was successfully created."
 
 before_remove:
-	- sudo service apache2 stop
+	- service apache2 stop
 
 after_remove:
 	- sudo sed -i "/<localhost> <project-name>.<tld>/d" <hosts>
-	- sudo rm <apache-sites-enabled>/<project-name>
-	- sudo service apache2 start
+	- rm <apache-sites-enabled>/<project-name>
+	- service apache2 start
 	- echo "Project '<project-name>' was successfully removed."
