Manager: save command save name & email from git, multiple templates per project

--- a/data/templates/default.neon
+++ b/data/templates/default.neon
@@ -9,3 +9,6 @@ before_remove:
 
 after_remove:
 	- echo "Project '<project-name>' was successfully removed."
+
+touch:
+	- echo "'<project-name>' - '<project-dir>'"
