Tests: pre-create sites-enabled apache & apache folders

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,6 +1,7 @@
 output
 /temp
 /alchemist/data/config/config.local.neon
-/alchemist/Console/data/apache/sites-enabled/
-/alchemist/Console/data/nginx/sites-enabled/
+/alchemist/Console/data/apache/sites-enabled/*
+/alchemist/Console/data/nginx/sites-enabled/*
 /alchemist/Console/data/hosts
+!.gitkeep
