--- a/data/templates/default.neon
+++ b/data/templates/default.neon
@@ -12,6 +12,7 @@ after_remove:
 
 touch:
 	- echo "'<project-name>' - '<project-dir>'"
+	- cd <project-dir> && git rev-parse --is-inside-work-tree && git diff --numstat
 
 save:
 	- echo "Project '<project-name>' was successfully saved."
