--- a/tests/alchemist/data/templates/common.neon
+++ b/tests/alchemist/data/templates/common.neon
@@ -10,3 +10,7 @@ before_remove:
 
 after_remove:
     - echo "Project '<project-name>' was successfully removed."
+
+touch:
+    - echo "'<project-name>' - '<project-dir>'"
+    - cd <project-dir> && git rev-parse --is-inside-work-tree && git diff --numstat
