Alchemist: fix 'template' position in config && improve templates

--- a/data/templates/default.neon
+++ b/data/templates/default.neon
@@ -16,3 +16,6 @@ touch:
 
 save:
 	- echo "Project '<project-name>' - '<project-dir>' was successfully saved."
+
+suppress:
+	- echo "Project '<project-name>' - '<project-dir>' already exist."
