--- a/data/templates/apache.neon
+++ b/data/templates/apache.neon
@@ -3,14 +3,14 @@ parameters:
 
 before_create:
 	- sudo service apache2 stop
+
+after_create:
+	- sudo chmod -R 0777 <projects-dir>/<project-name>
 	- echo "<localhost> <project-name>.<tld>" >> <hosts>
 	- sudo cp <apache-virtual-host-default> <apache-sites-enabled>/<project-name>.conf
 	- sudo sed -i 's/port/<port>/g' <apache-sites-enabled>/<project-name>.conf
 	- sudo sed -i 's/host-name/<project-name>.<tld>/g' <apache-sites-enabled>/<project-name>.conf
 	- sudo sed -i 's|'project-root'|'<project-dir>/<root>'|g' <apache-sites-enabled>/<project-name>.conf
-
-after_create:
-	- chmod -R 0777 <projects-dir>/<project-name>
 	- sudo service apache2 start
 	- echo "Project '<project-name>' was successfully created."
 
@@ -22,3 +22,6 @@ after_remove:
 	- sudo rm <apache-sites-enabled>/<project-name>
 	- sudo service apache2 start
 	- echo "Project '<project-name>' was successfully removed."
+
+suppress:
+	- echo "Project '<project-name>' - '<project-dir>' already exist."
