--- a/data/templates/apache.neon
+++ b/data/templates/apache.neon
@@ -17,6 +17,10 @@ after_create:
 before_remove:
 	- sudo service apache2 stop
 
+touch:
+	- echo "'<project-name>' - '<project-dir>'"
+	- "cd <project-dir> && if [ $(git rev-parse --is-inside-work-tree) = 'true' ]; then git diff HEAD --numstat; fi 2>/dev/null"
+
 after_remove:
 	- sudo sed -i "/<localhost> <project-name>.<tld>/d" <hosts>
 	- sudo rm <apache-sites-enabled>/<project-name>
