--- a/tests/alchemist/data/templates/nginx.neon
+++ b/tests/alchemist/data/templates/nginx.neon
@@ -1,5 +1,5 @@
 parameters:
-	projects-dir: nginx
+	projects-dir: defaultt2
 
 before_create:
 	- sudo service nginx stop
@@ -13,6 +13,10 @@ after_create:
 	- sudo sed -i 's|'project-root'|'<project-dir>/<root>'|g' <nginx-sites-enabled>/<project-name>
 	- sudo service nginx start
 	- echo "Project '<project-name>' was successfully created."
+
+touch:
+	- echo "'<project-name>' - '<project-dir>'"
+	- "cd <project-dir> && if [ $(git rev-parse --is-inside-work-tree) = 'true' ]; then git diff HEAD --numstat; fi 2>/dev/null"
 
 before_remove:
 	- sudo service nginx stop
