--- a/data/templates/nginx.neon
+++ b/data/templates/nginx.neon
@@ -6,7 +6,7 @@ before_create:
 
 after_create:
 	- sudo chmod -R 0777 <projects-dir>/<project-name>
-	- echo "<localhost> <project-name>.<tld>" >> <hosts>
+	- sudo sh -c "echo '<localhost> <project-name>.<tld>' >> <hosts>"
 	- sudo cp <nginx-virtual-host-default> <nginx-sites-enabled>/<project-name>
 	- sudo sed -i 's/port/<port>/g' <nginx-sites-enabled>/<project-name>
 	- sudo sed -i 's/host-name/<project-name>.<tld>/g' <nginx-sites-enabled>/<project-name>
