templates: suppress messages imroved

--- a/data/templates/default.neon
+++ b/data/templates/default.neon
@@ -21,4 +21,4 @@ save:
 	- echo "Project '<project-name>' - '<project-dir>' was successfully saved."
 
 suppress:
-	- echo "Project '<project-name>' - '<project-dir>' already exists."
+	- echo "Project '<project-name>' - '<project-dir>' skipped."
