--- a/data/templates/nginx.neon
+++ b/data/templates/nginx.neon
@@ -28,4 +28,4 @@ after_remove:
 	- echo "Project '<project-name>' was successfully removed."
 
 suppress:
-	- echo "Project '<project-name>' - '<project-dir>' already exists."
+	- echo "Project '<project-name>' - '<project-dir>' skipped."
