--- a/tests/alchemist/data/templates/apache.neon
+++ b/tests/alchemist/data/templates/apache.neon
@@ -6,7 +6,7 @@ before_create:
 
 after_create:
 	- sudo chmod -R 0777 <projects-dir>/<project-name>
-	- echo "<localhost> <project-name>.<tld>" >> <hosts>
+	- sudo sh -c "echo '<localhost> <project-name>.<tld>' >> <hosts>"
 	- sudo cp <apache-virtual-host-default> <apache-sites-enabled>/<project-name>.conf
 	- sudo sed -i 's/port/<port>/g' <apache-sites-enabled>/<project-name>.conf
 	- sudo sed -i 's/host-name/<project-name>.<tld>/g' <apache-sites-enabled>/<project-name>.conf
@@ -23,7 +23,7 @@ before_remove:
 
 after_remove:
 	- sudo sed -i "/<localhost> <project-name>.<tld>/d" <hosts>
-	- sudo rm <apache-sites-enabled>/<project-name>
+	- sudo rm -f <apache-sites-enabled>/<project-name>
 	- sudo service apache2 start
 	- echo "Project '<project-name>' was successfully removed."
 
