--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   },
   "require-dev": {
     "nette/caching": "@dev",
-    "nette/tester": "@dev"
+    "nette/tester": "@dev",
+    "phpstan/phpstan": "^0.12.33"
   },
   "bin": [
     "bin/alchemist"
